<resources>
    <string name="app_name">DriverBuddy</string>

    <!-- Login -->
    <string name="Username">Username</string>
    <string name="Password">Password</string>
    <string name="Email">Email</string>
    <string name="LoginBtn">Login</string>
    <string name="SignupBtn">Sign Up</string>
    <string name="LogoutBtn">Log Out</string>
    <string name="Welcome">Welcome!</string>
    <string name="SignupLink">New to DriverBuddy? Register <here></here></string>

    <!-- Navigator Menu Items -->
    <string-array name="nav_drawer_items">
        <item> My Car</item>
        <item> Gas Station</item>
        <item> test</item>
        <item>test1</item>
        <item>test2</item>
        <item>test3</item>
    </string-array>

    <string name="action_settings">Settings</string>
    <string name="drawer_open">Slider Menu Opened</string>
    <string name="drawer_close">Slider Menu Closed</string>

    <!-- Navigator List Item Icons -->
    <array name="nav_drawer_icons">
        <item>@mipmap/ic_car</item>
        <item>@mipmap/ic_gas_station</item>
        <item>@mipmap/ic_car</item>
        <item>@mipmap/ic_gas_station</item>
        <item>@mipmap/ic_car</item>
        <item>@mipmap/ic_gas_station</item>
    </array>

    <!-- Content Description -->
    <string name="desc_list_item_icon">Item Icon</string>
</resources>
